--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -2,13 +2,13 @@
 
 one:
   title: MyString
-  description: MyText
+  description: My Text Here
   image_url: MyString
   price: 9.99
 
 two:
   title: MyString
-  description: MyText
+  description: My Text Here
   image_url: MyString
   price: 9.99
 
