--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,9 +1,18 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# one:
+#   product_id: 
+#   cart_id: 
+
+# two:
+#   product_id: 
+#   cart_id: 
+
+
 one:
-  product_id: 
-  cart_id: 
+  product: ruby
+  cart: one
 
 two:
-  product_id: 
-  cart_id: 
+  product: ruby
+  cart: one
