--- a/test/fixtures/pay_types.yml
+++ b/test/fixtures/pay_types.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  id: 1
+  name: Check
 
 two:
-  name: MyString
+  id: 2
+  name: Credit card
+
+three:
+  id: 3
+  name: Purchase order
