--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,52 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
+# default: &default
+#   adapter: sqlite3
+#   pool: 5
+#   timeout: 5000
+
+production:
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: depot_production
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: password
+  host: localhost
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: depot_development
+  pool: 5
+  username: postgres
+  password: password
+  host: localhost
+
+test:
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: depot_test
+  pool: 5
+  username: postgres
+  password: password
+  host: localhost
+
+# development:
+#   <<: *default
+#   database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
